// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.system.v1alpha;

import "wfa/measurement/system/v1alpha/public_resource.proto";

option java_package = "org.wfanet.measurement.system.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "RequisitionServiceProto";

// System API service for interacting with MetricRequisition resources.
service Requisition {
  // Changes the state of a MetricRequisition to FULFILLED.
  //
  // This is a state transition method (see https://aip.dev/216).
  rpc FulfillMetricRequisition(FulfillMetricRequisitionRequest)
      returns (FulfillMetricRequisitionResponse);
}

// Request message for FulfillMetricsRequisition method.
message FulfillMetricRequisitionRequest {
  // Resource key of the MetricRequisition to mark as fulfilled.
  // Required.
  MetricRequisitionKey key = 1;
}

// Response message for FulfillMetricsRequisition method.
message FulfillMetricRequisitionResponse {}
